Arregladas las fuentes y los links

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -77,7 +77,7 @@ html(lang="en")
                   a.toFamiliar
                     .tile.rt#r2t4
                       span PASTAHOGAR FAMILIAR
-                    
+
                   a.toContacto
                     .tile.lt#r3t1
                       span CONTACTO SERVICIO
@@ -107,17 +107,17 @@ html(lang="en")
                   span#title Productos
                 .col-md-9.col-sm-9
                   .header#product-header
-                    .menu-item#familiar FAMILIAR
+                    .menu-item.toFamiliar#familiar FAMILIAR
                     .menu-item.toGourmet#gourmet GOURMET
-                    .menu-item#premium PREMIUM
+                    .menu-item.toPremium#premium PREMIUM
                     .menu-item.toRaviolini#raviolini RAVIOLINI
                     hr
                     .menu-decoration
-                      .menu-circle#c-familiar
+                      .menu-circle.toFamiliar#c-familiar
                     .menu-decoration
                       .menu-circle.toGourmet#c-gourmet
                     .menu-decoration
-                      .menu-circle#c-premium
+                      .menu-circle.toPremium#c-premium
                     .menu-decoration
                       .menu-circle.toRaviolini#c-raviolini
               //- FAMILIAR
