--- a/app/stylus/stylesheet.styl
+++ b/app/stylus/stylesheet.styl
@@ -608,6 +608,7 @@ html
         font-size 15px
         display block
         cursor pointer
+        font-family GothamR
         &:hover
           color darken($hog-lgray, 80%)
       img
@@ -621,6 +622,7 @@ html
         margin-top 30px
         margin-left 10px
         margin-bottom 20px
+        font-family GothamR
 
 
 
