Arreglar barra de navegación para que esté alineado el contenido

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -311,12 +311,12 @@ html(lang="en")
                 .col-md-5.col-md-offset-2.col-sm-5.col-sm-offset-2
                   img#raviolini-pic(src='https://s21.postimg.org/r7sfa8paf/image.png', style="width: 100%")
                 .col-md-5.col-sm-5.col-xs-12#col-detalles
-                  h2.module-title ACCESORIO RAVIOLINI
+                  h2.module-title RAVIOLINI® CLÁSICO*
 
                   .module-subtitle-container
-                    h3.module-subtitle#raviolini FABRICADORA DE PASTAS
+                    h3.module-subtitle#raviolini FABRICADORA DE PLANCHAS DE RAVIOLES
                   p.
-                    El ACCESORIO RAVIOLINI de HOGARIS es el complemento ideal para quienes disfrutan del inigualable sabor de las pastas caseras. Se acopla firme y fácilmente en la parte posterior de su PASTAHOGAR. Con un sencillo aplique en la parte posterior de su PASTAHOGAR, usted podrá fabricar rápidamente deliciosas planchas de ravioles rellenos.I® CLÁSICO*
+                    El ACCESORIO RAVIOLINI de HOGARIS es el complemento ideal para quienes disfrutan del inigualable sabor de las pastas caseras. Se acopla firme y fácilmente en la parte posterior de su PASTAHOGAR. Con un sencillo aplique en la parte posterior de su PASTAHOGAR, usted podrá fabricar rápidamente deliciosas planchas de ravioles rellenos.
                   p(style="font-size: 0.8em; margin-top: 30px").
                     *Apto para PastaHogar Familiar y Premium.
               .row
