Corregida la palabra linea

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -43,7 +43,7 @@ html(lang="en")
                       a#menu-productos(href="#") Productos
                       .dropdown-menu#productos
                           span.dropdown-item
-                            a.toFamiliar Linea PASTAHOGAR
+                            a.toFamiliar Línea PASTAHOGAR
                           span.dropdown-item
                             a.toRaviolini Accesorio RAVIOLINI
                     li.menu-item-header
