--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -7,6 +7,8 @@ html(lang="en")
     meta(name="viewport"
     content="width=device-width, initial-scale=1.0")
 
+    meta(charset="UTF-8")
+
     link(
       rel="stylesheet",
       href="stylesheet.css",
